
Tue, 02 Oct 2007 11:32:25 +0200

	- ITAGAKI Takahiro <itagaki.takahiro@oss.ntt.co.jp> added thread-safe
	  descriptor handling
	
Wed, 03 Oct 2007 10:48:39 +0200

	- Hopefully fixed some stuff that causes Windows builds to fail.
	- Cleaned up ecpglib and renamed functions that do not need to be
	  exported.
	- Created export list for ecpglib.
	- Also created export list for pgytpeslib and compatlib.
	
Wed, 10 Oct 2007 08:31:44 +0200
	
	- Synced parser and keyword list.

Tue, 06 Nov 2007 09:29:22 +0100

	- Fixed two parser bugs.

Fri, 21 Dec 2007 15:30:39 +0100

	- Fixed a few minor glitches pointed out by splint.

Fri, 28 Dec 2007 12:15:38 +0100

	- Applied patch send by ITAGAKI Takahiro
	  <itagaki.takahiro@oss.ntt.co.jp> to fix bug in connect statement if
	  user name is a variable. 
	- Also fixed test case that didn't detect this.

Fri, 11 Jan 2008 16:16:24 +0100

	- Fixed lexer to correctly parse C quotes.

Sun, 13 Jan 2008 12:52:15 +0100

	- Changed prototype for ECPGdo because some compilers don't like
	  int/enum aliasing in there.

Mon, 14 Jan 2008 10:42:23 +0100

	- Set valid return values even in case of an error to prevent
	  segfaults.

Tue, 15 Jan 2008 11:26:14 +0100

	- Re-enabled variables in fetch/move command.
	- Set pgtypes library version to 3.0.
	- Set compat library version to 3.0.
	- Set ecpg library version to 6.0.
	- Set ecpg version to 4.4.

Wed, 06 Feb 2008 09:04:48 +0100

	- Fixed segfault in ecpg when using an array element.
	- Free all memory in auto-prepare mode.

Thu, 14 Feb 2008 13:11:34 +0100

	- Added SQLSTATE macro closing bug #3961.
	- EXECUTE can return NOT FOUND so it should be checked here too.
	- Changed regression test accordingly.

Fri, 15 Feb 2008 12:01:13 +0100

	- Changed the way symbols are defined in C in INFORMIX mode.

Sun, 17 Feb 2008 18:45:39 +0100

	- Removed duplicate include of ecpgtype.h.
	- Changed INFORMIX mode symbol definition yet again because the old
	  way didn't work on NetBSD.